--- a/Iflix_Assignement/pom.xml
+++ b/Iflix_Assignement/pom.xml
@@ -24,6 +24,13 @@
          <version>20180130</version>
      </dependency>
      
+      <!-- Joda-time dependency -->
+      <dependency>
+          <groupId>joda-time</groupId>
+          <artifactId>joda-time</artifactId>
+          <version>2.9.9</version>
+      </dependency>
+     
 	<dependency>
 	    <groupId>javax.json</groupId>
 	    <artifactId>javax.json-api</artifactId>
