change in partner service Test

--- a/Iflix_Assignement/pom.xml
+++ b/Iflix_Assignement/pom.xml
@@ -18,6 +18,12 @@
       <version>2.9.4</version>
   	</dependency>
   	
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+  	
      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
@@ -43,20 +49,54 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
-     
-     
+          
   </dependencies>
+  <distributionManagement> 
+  	<repository> 
+  		<id>internal.repo</id> 
+  		<name>Internal repo</name>
+  		 <url>file:///home/sumanth/testesb/in</url>
+  	 </repository> 
+  	</distributionManagement>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>  
   <build>
     <sourceDirectory>src</sourceDirectory>
+    
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+		 <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>main.java.Application</mainClass>
+                </configuration>
+            </plugin>    
+            
+ 			<plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>main.java.Application</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
     </plugins>
   </build>
 </project>
